# SoaFranca

./: .gitmodules  CMakeLists.txt  build_toolchain.sh
.github/workflows/: ci_action.yml
cfg/: commonapi.ini  vsomeip.json  vsomeip_client.json  vsomeip_server.json
examples/: CMakeLists.txt
examples/fidl/: TpOverUdpTest.fdepl  TpOverUdpTest.fidl
examples/src/: HelloWorldClient.cpp  HelloWorldService.cpp  HelloWorldStubImpl.cpp  HelloWorldStubImpl.hpp
