project(SoaFranca)
cmake_minimum_required(VERSION 3.1.3)
set(CMAKE_CXX_STANDARD 11)
if (CMAKE_HOST_APPLE)
    SET(CMAKE_MACOSX_RPATH 1)
endif()

set_property(GLOBAL PROPERTY ALLOW_DUPLICATE_CUSTOM_TARGETS 1)
if (CMAKE_HOST_WIN32)
    set(FIDL_CORE_GENERATOR ${CMAKE_SOURCE_DIR}/host_tools/commonapi_core_generator/commonapi-core-generator-windows-x86.exe)
    set(FIDL_DBUS_GENERATOR ${CMAKE_SOURCE_DIR}/host_tools/commonapi_dbus_generator/commonapi-dbus-generator-windows-x86.exe)
    set(FIDL_SOMEIP_GENERATOR ${CMAKE_SOURCE_DIR}/host_tools/commonapi_someip_generator/commonapi-someip-generator-windows-x86.exe)
elseif (CMAKE_HOST_APPLE)
    set(FIDL_CORE_GENERATOR ${CMAKE_SOURCE_DIR}/host_tools/commonapi_core_generator/commonapi-core-generator.app)
    set(FIDL_DBUS_GENERATOR ${CMAKE_SOURCE_DIR}/host_tools/commonapi_dbus_generator/commonapi-dbus-generator.app)
    set(FIDL_SOMEIP_GENERATOR ${CMAKE_SOURCE_DIR}/host_tools/commonapi_someip_generator/commonapi-someip-generator.app)
else ()
    set(FIDL_CORE_GENERATOR ${CMAKE_SOURCE_DIR}/host_tools/commonapi_core_generator/commonapi-core-generator-linux-x86_64)
    set(FIDL_DBUS_GENERATOR ${CMAKE_SOURCE_DIR}/host_tools/commonapi_dbus_generator/commonapi-dbus-generator-linux-x86_64)
    set(FIDL_SOMEIP_GENERATOR ${CMAKE_SOURCE_DIR}/host_tools/commonapi_someip_generator/commonapi-someip-generator-linux-x86_64)
endif()

if (CMAKE_HOST_APPLE)
    add_compile_options(-Wno-attributes  -Wno-error=deprecated-declarations)
endif ()

add_subdirectory(thirdparty)
add_subdirectory(examples)
